feat: Assessment result schema updates(#481)
* changed print to logger

* Added experiments profiling setup

Signed-off-by: Chris Butler <chris@thebutlers.me>

* added flah to benchmark with or without json serialization

* readme file for assessment. result object

* changed prinet to logger

Signed-off-by: Vikas <avikas@in.ibm.com>

* feat: Update NIST models to latest including refactors & UT's

* feat:Update Oscal version

Signed-off-by: Chris Butler <chris@thebutlers.me>

* transformer changes with respect to OSCAL 1.0.0 rc2

* update documentation (transform results)

* multiple changes for latest nist - some tests still fail

Signed-off-by: FrankSuits <frankst@au1.ibm.com>

* removed ssp validate test

Signed-off-by: FrankSuits <frankst@au1.ibm.com>

* fixed code format

Signed-off-by: FrankSuits <frankst@au1.ibm.com>

* fix:Reworking generators

Signed-off-by: Chris Butler <chris@thebutlers.me>

* cleaned up gen-oscal.py and regenerated the oscal models.

Signed-off-by: FrankSuits <frankst@au1.ibm.com>

Co-authored-by: Chris Butler <chris@thebutlers.me>
Co-authored-by: degenaro <lou.degenaro@gmail.com>
Signed-off-by: Vikas <avikas@in.ibm.com>

* 0.11.0

Automatically generated by python-semantic-release

Signed-off-by: Vikas <avikas@in.ibm.com>

* feat:Improved serialisation support for OscalBaseModel (#454)

* feat:Improved serialization support.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix:Serializing by appropriate key and minimizing file size.

Signed-off-by: Chris Butler <chris@thebutlers.me>
Signed-off-by: Vikas <avikas@in.ibm.com>

* Feat:transformer factory (#455)

* initial prototype of transformer factory

Signed-off-by: FrankSuits <frankst@au1.ibm.com>

* added singleton transformer factory

Signed-off-by: FrankSuits <frankst@au1.ibm.com>

* added base transformer class

Signed-off-by: FrankSuits <frankst@au1.ibm.com>

* more fixes and added tests

Signed

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,8 +96,14 @@ nav:
       - ssp: api_reference/trestle.oscal.ssp.md
       - component: api_reference/trestle.oscal.component.md
       - assessment_plan: api_reference/trestle.oscal.assessment_plan.md
-    - third_party:
-      - exchange_protocol: api_reference/trestle.third_party.exchange_protocol.md
+    - transforms:
+      - transformer_factory: api_reference/trestle.transforms.transformer_factory.md
+      - results: api_reference/trestle.transforms.results.md
+      - transformer_singleton: api_reference/trestle.transforms.transformer_singleton.md
+      - utils:
+        - tanium_helper: api_reference/trestle.transforms.utils.tanium_helper.md
+      - implementations:
+        - tanium: api_reference/trestle.transforms.implementations.tanium.md
     - cli: api_reference/trestle.cli.md
 plugins:
 - search
