--- a/setup.cfg
+++ b/setup.cfg
@@ -29,14 +29,13 @@ install_requires =
     paramiko
     pyyaml
     furl
-    pydantic[email]>=1.8.1
+    pydantic[email]>=1.8.2
     python-dotenv>=0.10.4
     datamodel-code-generator[http]
     python-frontmatter
     mistune==2.0.0rc1 # Review regularly.
     pywin32 >= 1.0;platform_system=='Windows'
-
-
+    MarkupSafe<2.0
 [options.package_data]
 trestle.resources = 
     *.ini
@@ -54,6 +53,7 @@ console_scripts =
 
 [options.extras_require]
 dev =
+    MarkupSafe<2.0
     pytest>=5.4.3
     pytest-cov>=2.10.0
     pre-commit>=2.4.0
@@ -71,6 +71,8 @@ dev =
     mkdocs-material
     markdown-include
     pymdown-extensions
+    ## Constrain system 
+   
     
 [semantic_release]
 version_variable=trestle/__init__.py:__version__
