fix: Updating documentation to exploit code highlighting. (#877)
* fix: Updating documentation to exploit code highlighting.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: Minor changes

Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,9 @@ markdown_extensions:
 - pymdownx.superfences
 - pymdownx.tabbed
 - pymdownx.tasklist
+- pymdownx.highlight
+- pymdownx.inlinehilite
+- pymdownx.snippets
 - toc:
     permalink: ¤
 nav:
@@ -163,6 +166,8 @@ site_description: Documentation for compliance-trestle package.
 site_name: Compliance Trestle
 site_url: https://ibm.github.io/compliance-trestle
 theme:
+  features:
+  - content.code.annotate
   name: material
   palette:
     accent: purple
